--- a/Resource.resx
+++ b/Resource.resx
@@ -190,6 +190,15 @@
   <data name="Stat_detail_backgrnd2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Stat.detail.backgrnd2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Stat_detail_backgrnd3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Stat.detail.backgrnd3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Stat_detail_abilityTitle_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Stat.detail.abilityTitle.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Stat_detail_metierLine_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Stat.detail.metierLine.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Stat_detail_BtHpUp_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Stat.detail.BtHpUp.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
