[KMS] Window.Item

--- a/Resource.resx
+++ b/Resource.resx
@@ -568,6 +568,18 @@
   <data name="Item_BtCoin_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.BtCoin.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Item_BtPoint_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPoint.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPoint_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPoint.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPoint_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPoint.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPoint_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPoint.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Item_BtFull_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.BtFull.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -615,6 +627,174 @@
   </data>
   <data name="Item_BtSort_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.BtSort.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtDisassemble4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtDisassemble4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtExtract4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtExtract4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtAppraise4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtAppraise4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtBits4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtBits4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtPot4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtPot4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtUpgrade4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtUpgrade4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtToad4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtToad4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="BtClose3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\BtClose3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
