--- a/Resource.resx
+++ b/Resource.resx
@@ -796,6 +796,18 @@
   <data name="Item_BtToad4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.BtToad4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Item_BtCashshop_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCashshop.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtCashshop_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCashshop.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtCashshop_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCashshop.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtCashshop_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCashshop.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BtClose3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\BtClose3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
