--- a/Resource.resx
+++ b/Resource.resx
@@ -517,6 +517,9 @@
   <data name="CashItem_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashItem.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Item_timeLimit_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.timeLimit.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="VScr9_enabled_base" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\VScr9.enabled.base.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
