--- a/Resource.resx
+++ b/Resource.resx
@@ -523,6 +523,57 @@
   <data name="CashItem_label_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashItem_label.3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CSDiscount_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.4.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.5.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.6.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.7.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.8.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.9.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.arrow.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_backgrnd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.backgrnd.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_bonus" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.bonus.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_e" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.e.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_Line" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.Line.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_total" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.total.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CSDiscount_w" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CSDiscount.w.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Item_timeLimit_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.timeLimit.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
