--- a/Resource.resx
+++ b/Resource.resx
@@ -520,6 +520,12 @@
   <data name="CashItem_label_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashItem_label.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CashItem_label_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CashItem_label_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CashItem_label_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashItem_label.3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
