--- a/Resource.resx
+++ b/Resource.resx
@@ -586,6 +586,9 @@
   <data name="Item_monsterCollection_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.monsterCollection.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ItemProtector_Icon_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\ItemProtector.Icon.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="VScr9_enabled_base" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\VScr9.enabled.base.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
