--- a/Resource.resx
+++ b/Resource.resx
@@ -529,6 +529,15 @@
   <data name="CashItem_label_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashItem_label.3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CashItem_label_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.4.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CashItem_label_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.5.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CashItem_label_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.6.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CSDiscount_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CSDiscount.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
