--- a/Resource.resx
+++ b/Resource.resx
@@ -775,17 +775,29 @@
   <data name="Item_FullBackgrnd3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.FullBackgrnd3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Item_BtCoin_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Item.BtCoin.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Item_BtCoin3_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin3.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Item_BtCoin_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Item.BtCoin.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Item_BtCoin3_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin3.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Item_BtCoin_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Item.BtCoin.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Item_BtCoin3_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin3.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Item_BtCoin_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Item.BtCoin.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Item_BtCoin3_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin3.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtCoin4_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin4.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtCoin4_mouseOver_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin4.mouseOver.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtCoin4_normal_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin4.normal.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Item_BtCoin4_pressed_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Item.BtCoin4.pressed.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Item_BtPoint_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.BtPoint.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
