--- a/Resource.resx
+++ b/Resource.resx
@@ -676,6 +676,15 @@
   <data name="CashItem_label_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashItem_label.6.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CashItem_label_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.7.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CashItem_label_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.8.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="CashItem_label_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashItem_label.9.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CSDiscount_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CSDiscount.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
