--- a/Resource.resx
+++ b/Resource.resx
@@ -655,35 +655,35 @@
   <data name="CashItem_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashItem.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.1.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.2.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.3.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.4.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.4.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.5.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.5.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.6.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.6.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.7.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.7.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.8.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.8.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CashItem_label_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\CashItem_label.9.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CashShop_img_CashItem_label_9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.9.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CSDiscount_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CSDiscount.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
