--- a/Resource.resx
+++ b/Resource.resx
@@ -385,6 +385,18 @@
   <data name="HyperStat_Window_statList_80000417" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\HyperStat.Window.statList.80000417.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HyperStat_Window_statList_80000418" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\HyperStat.Window.statList.80000418.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HyperStat_Window_statList_80000419" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\HyperStat.Window.statList.80000419.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HyperStat_Window_statList_80000420" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\HyperStat.Window.statList.80000420.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="HyperStat_Window_statList_80000421" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\HyperStat.Window.statList.80000421.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Item_Tab_disabled_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Item.Tab.disabled.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
