--- a/Resource.resx
+++ b/Resource.resx
@@ -1198,6 +1198,9 @@
   <data name="CashShop_img_CashItem_label_10" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CashShop.img.CashItem_label.10.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CashShop_img_CashItem_label_11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\CashShop.img.CashItem_label.11.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="CSDiscount_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\CSDiscount.0.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
